# surfaceNormalsFromDepthMaps

./: .coverage  LICENSE  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: test.yml
src/depth_normals/: depth2normals  mk_normals.cpp  mk_normals.h  normals_methods.pyx  setup.py
src/depth_normals/lib/: normals_method.pxd
tests/: test.py  test_depth_normals.py
